--- a/sherim hakkinda.html
+++ b/sherim hakkinda.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en,tr">
+<html lang="en,tr"><!--Türkçe ve İngilizce dilini ekleyin-->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seviğim Şehir</title>
+    <title>Seviğim Şehir</title>  <!--Ana menü ekle-->
     <style>
          body
          {
@@ -27,8 +27,8 @@
       background-color: lightgray;
 }
     </style>
-</head>
-<body>
+</head> <!--Ana menüde fotoğraflar ve giriş listesi eklenir-->
+<body> 
     <h1><a href="https://images.app.goo.gl/pB6NwTaNAwcTizfk8">Almaheet</a></h1>
     <img src="sehir.jpg" width="250px" height="250px">
     <aside>
