--- a/one.html
+++ b/one.html
@@ -6,14 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-</head>
+</head> 
 <body style="background-color: cornflowerblue;">
  <div><h1>Kendim hakkında</h1>
   <h3>Benim adım Marzooq Ali Hassan Moftah, Yemenliyim.</h3>
    <h3>22 yaşındayım ve şu anda Türkiye'de yaşıyorum.</h3>
    <h3>Sakarya Üniversitesi'nde birinci sınıf bilgisayar mühendisliği okuyorum.</h3>
    </div>
-   <br><br>
+   <br><br> <!--Bu dosya kendim ve lise eğitimim hakkında bilgiler içeriyor-->
     <h1> favori hobilerim:</h1>
         <ul>
           <li><h3 class="ma1">Gönüllü çalışmalara katılın Daha <a href="https://images.app.goo.gl/wztVCVNdfd1BGwhCA">fazla bilgiler buraya tıklayın</a></h3></a></li>
