--- a/dropdownList.html
+++ b/dropdownList.html
@@ -2,7 +2,8 @@
 <html lang="en,tr">
 <head>
   <title>Homepage</title>
-  <meta charset="utf-8">
+  <meta charset="utf-8"> 
+  <!--Bootstrap'a temalar ve değişiklikler ekleyin-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
